<resources>
    <string name="app_name">QuizApp</string>
    <string name="title">APTITUDE TEST</string>
    <string name="name">NAME</string>
    <string name="sem">SEMESTER</string>
    <string name="roll">ROLL NO</string>
    <string name="instruc">
        INSTRUCTIONS:\n
        1. Each question of 1 mark.\n
        2. Total 4 questions are there\n
        3. 1 mark is awarded for each correct answer
    </string>
    <string name="q1">Q1. Which of the following is not a Java features?</string>
    <string name="q2">Q2. In an instance method or a constructor, "this" is a reference to the current object.</string>
    <string name="q3">Q3. Which one of the following is/are true?</string>
    <string name="q4">Q4. In java, jar stands for</string>
</resources>