<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/front"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="294dp"
        android:layout_height="69dp"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/ename"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#9E9999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/sem"
        android:layout_width="124dp"
        android:layout_height="42dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:text="@string/sem"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/esem"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Semester"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#9E9999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ename" />

    <TextView
        android:id="@+id/roll"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:text="@string/roll"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem" />

    <EditText
        android:id="@+id/eroll"
        android:layout_width="198dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@drawable/background"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Roll no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#9E9999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esem" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="343dp"
        android:layout_height="128dp"
        android:text="@string/instruc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/quiz"
        android:layout_width="198dp"
        android:layout_height="72dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:layout_marginBottom="81dp"
        android:background="@drawable/background"
        android:padding="10dp"
        android:text="Start Quiz"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />

</androidx.constraintlayout.widget.ConstraintLayout>