<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/q1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/r1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dynamic" />

                <RadioButton
                    android:id="@+id/r2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Architecture Neutral" />

                <RadioButton
                    android:id="@+id/r3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Use of pointers" />

                <RadioButton
                    android:id="@+id/r4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

            </RadioGroup>

            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/q2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/t"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="True" />

                <RadioButton
                    android:id="@+id/f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="False" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/q3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A class containing abstract methods is called an abstract class." />

            <CheckBox
                android:id="@+id/c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Abstract methods should be implemented in the derived class." />

            <CheckBox
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="An abstract class cannot have non-abstract methods." />

            <CheckBox
                android:id="@+id/c4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A class must be qualified as ‘abstract’ class, if it contains one abstract method." />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q4"
                    android:layout_width="253dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/q4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ans1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="0.5"
                    android:background="@drawable/background"
                    android:text="SUBMIT"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>